website/tests/snapshots/errors/index.exp
=== block 1 ===
No errors!

=== block 2 ===
Error -------------------------------------------------------------------------------- -:3:1

Cannot cast `3` to string because number [1] is incompatible with string [2]. [incompatible-type]

   -:3:1
   3| 3 as string; // Error
      ^ [1]

References:
   -:3:6
   3| 3 as string; // Error
           ^^^^^^ [2]


Found 1 error

=== block 3 ===
No errors!
